# PyWeaver

./: LICENSE  MANIFEST.in  README.md  __init__.py  conftest.py  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: docs.yml
common/: __init__.py  processor.py  types.py
common/_impl/: _processor.py
docs/: contributing.md  gen_ref_pages.py  hooks.py  index.md  pyweaver_structure.txt
docs/stylesheets/: extra.css
docs/usage/: combining.md  init.md  quickstart.md  structure.md
examples/: file_combiner_example.py  init_generator_example.py  structure_generator_example.py
file_combiner/: __init__.py  combiner.py
file_combiner/_impl/: _combiner.py  _processor.py  _writer.py
init_generator/: __init__.py  generator.py
init_generator/_impl/: __init__.py  _collector.py  _formatter.py  _generator.py  _writer.py
mkdocs_transform_gh_readme/: __init__.py  plugin.py
pyweaver/: __init__.py  init_config.json
pyweaver/common/: __init__.py  base.py  base_processor.py  enums.py  errors.py  tracking.py  type_definitions.py  types.py
pyweaver/config/: __init__.py  base.py  combiner.py  init.py  path.py
pyweaver/file_combiner/: __init__.py  combiner.py
pyweaver/file_combiner/_impl/: _combiner.py  _processor.py  _writer.py
pyweaver/init_generator/: __init__.py  config_generator.py  generator.py
pyweaver/init_generator/_impl/: __init__.py  _collector.py  _config_generator.py  _formatter.py  _generator.py  _writer.py
pyweaver/processors/: __init__.py  file_combiner.py  init_processor.py  structure.py  structure_generator.py
pyweaver/processors/_impl/: __init__.py  _file_combiner.py
pyweaver/structure_generator/: __init__.py  generator.py
pyweaver/structure_generator/_impl/: _formatter.py  _generator.py  _scanner.py  _types.py
pyweaver/utils/: __init__.py  module_analyzer.py  patterns.py  repr.py
structure_generator/: __init__.py  generator.py
structure_generator/_impl/: _formatter.py  _generator.py  _scanner.py  _types.py
tests/: test_file_combiner.py  test_init_generator.py  test_structure_generator.py  test_structure_generator_advanced.py
