[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "pyweaver"
version = "0.1.0"
description = "A toolkit for weaving together well-structured Python projects"
authors = ["Edward Jaworenko <edward@jaworenko.design>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/edwardmakesthings/pyweaver"
repository = "https://github.com/edwardmakesthings/pyweaver"
documentation = "https://edwardmakesthings.github.io/pyweaver"
keywords = ["python", "project-structure", "development-tools", "init-files"]

# Package dependencies are more focused on project structure and file handling
[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^2.0.0"
typing-extensions = "^4.0.0"
pathlib = "^1.0.0"

# Development dependencies include documentation tools for GitHub Pages
[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.10.1"
mypy = "^1.0.0"
pre-commit = "^2.19.0"
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.0.0"

# For GitHub Pages documentation
[project.optional-dependencies]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]

# Testing configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=pyweaver"

# Code formatting configuration
[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Import sorting configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


# Type checking configuration
[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# Documentation building configuration
[tool.mkdocs]
site_name = "PyWeaver"
site_description = "A toolkit for weaving together well-structured Python projects"
site_author = "Edward Jaworenko"
site_url = "https://edwardmakesthings.github.io/pyweaver"

# Theme configuration
theme = {name = "material", palette = {scheme = "default", primary = "indigo", accent = "indigo"}}

# Plugin configuration
plugins = ["search", "mkdocstrings"]

# Navigation structure
nav = [
    {Home = "index.md"},
    {Usage = [
        {"Quick Start": "usage/quickstart.md"},
        {"File Structure Generation": "usage/structure.md"},
        {"Init File Management": "usage/init.md"},
        {"File Combining": "usage/combining.md"}
    ]},
    {"API Reference" = "api.md"},
    {Contributing = "contributing.md"}
]